stage0/tests/compile_fail/enums/nonexhaustive_int.dg
func main() -> i32 {
    let n = 5
    match n {
        0 => 1,
        1 => 2,
    }
}
